crates/cosmon-cli/tests/snapshots/help__purge.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Purge dead workers from fleet state without changing molecule status

Usage: cs purge [OPTIONS] [WORKER]

Arguments:
  [WORKER]
          Optional worker ID — when given, targeted purge of that worker only.
          
          Without a worker the command sweeps every terminal-state worker from fleet state (the pre-ADR-052 behaviour). With a worker, only that worker is removed; pair with `--force` to SIGKILL its tmux session first (formerly `cs kill`).

Options:
      --config <PATH>
          Path to the state directory (default: the galaxy's .cosmon/state/)

      --force
          In targeted mode, SIGKILL the tmux session before removing the fleet entry. Ignored in sweep mode. Supersedes the stand-alone `cs kill` verb (ADR-052 §D3)

      --status <STATUS>
          Only purge workers matching this desired state (default: sweep all workers — Stopped ones and Running/Paused ones whose tmux session is gone)

  -v, --verbose
          Enable verbose output

      --json
          Output in JSON format

      --role <ROLE>
          Restrict the purge to workers matching this role discriminator — either `cognition` or `runtime` (see `WorkerRole`). Without this flag `cs purge` removes both runtime and cognition workers that meet the status predicate; with it, operators can clean up one half of a runtime+cognition pair without collapsing the other

      --allow-unharvested
          Permit reclaiming a worker whose molecule has unharvested changes.
          
          Without this flag `cs purge` fails closed: a worker whose pane is gone but whose branch still carries commits — or whose worktree still has uncommitted files — is left in the fleet, its molecule left `running`, and the commits and files at stake are named in an alert. With this flag the worker is removed but the molecule stays Running. A dead tmux session is evidence about the pane, not about the work (incident 2026-08-02, where four molecules were silently collapsed after a reboot with up to three commits each still unmerged).

      --worktrees
          Also run the `.worktrees/` reclamation pass (issue 61).
          
          Enumerates `readdir(.worktrees/) ∪ git worktree list --porcelain` — the filesystem and Git's own registry, not the worker roster, which is keyed by molecule and could not see a directory that has none. Reports every candidate: the reclaimable derived output on one side, and on the other every worktree withheld **with its reason**.
          
          Reclamation is opt-in and one tier deep. On its own this flag removes nothing; `--allow-unharvested` — the same gesture the sweep already uses, not a second one — executes the derived half. Durable content is never removed by any path in this command, whatever the flags (ADR-178): the eligibility verdict is advisory and is printed, not acted on.

      --sessions
          Also run the tmux session reclamation pass (ADR-179).
          
          Enumerates the galaxy's tmux socket — `list-panes -a`, not the worker roster. The roster is precisely what cannot see this population: the sweep above removes a terminal molecule's worker entry and the session it named lives on, unattributable, holding an agent process and its whole heap for as long as the machine is up. Each session is attributed by computing every known molecule's session name *forward* and matching, never by parsing a molecule id back out of a session name.
          
          Reclamation is opt-in exactly as `--worktrees` is: on its own this flag kills nothing, and `--allow-unharvested` — the same gesture, not a second one — executes it. A session is reclaimed only when its molecule is terminal, no client is attached, and its scrollback has been captured to that molecule's directory first.

      --dry-run
          Report what would change and change nothing.
          
          Applies to the whole command: no fleet entry is removed, no molecule is changed, no event is emitted and no byte is reclaimed. The `--worktrees` pass is dry by default and stays dry here.

  -h, --help
          Print help (see a summary with '-h')

EXAMPLES:
  cs purge                    # sweep: remove Stopped / Error / Stale workers
  cs purge worker-3           # targeted: remove a single worker (graceful path)
  cs purge worker-3 --force   # targeted + SIGKILL tmux (supersedes `cs kill`)

ADR-052 §D3 collapses `cs kill` + `cs purge` into this one verb: both
are infrastructure teardown. Sweep mode (no argument) stays unchanged;
targeted mode with `--force` replaces `cs kill`.

SEE ALSO: cs freeze (graceful + state preservation), cs teardown
(fleet-wide graceful shutdown).
