crates/cosmon-cli/tests/snapshots/help__run.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Run — walk a molecule DAG of N≥1 nodes via the resident runtime (ADR-016 Layer B)

Usage: cs run [OPTIONS] [MOLECULE]

Arguments:
  [MOLECULE]
          Root molecule ID (supports prefix matching like other commands).
          
          Required for the legacy DAG-policy mode. With `--resident` the loop walks the whole ensemble, so this argument is optional (any value, including `_`, is accepted and ignored).
          
          [default: ""]

Options:
      --config <PATH>
          Path to configuration file

      --policy <POLICY>
          Scheduling policy to use
          
          [default: dag]
          [possible values: dag, noop]

      --timeout <TIMEOUT>
          Maximum seconds before the runtime exits. 0 means no timeout (default)
          
          [default: 0]

  -v, --verbose
          Enable verbose output

      --json
          Output in JSON format

      --poll-interval <POLL_INTERVAL>
          Seconds between runtime ticks. Lower values are more responsive but increase store I/O
          
          [default: 1]

      --no-teardown
          Skip automatic teardown of completed molecules after the run.
          
          Teardown runs `cs done` on every molecule that reached `Completed` — and only those. A `Collapsed` molecule is explicitly-abandoned work: it is terminal, but `cs done` also merges the molecule's branch onto the trunk, so a collapsed branch must never be handed to it. A teardown that fails exits with the NAMED code 93 (`teardown_failed`): the branch is unmerged and the worktree / session is still standing, which a detached caller cannot learn any other way.

      --sweep-every <SWEEP_EVERY>
          ADR-038 Limit 1: re-walk the store every N ticks to absorb descendants nucleated dynamically by workers (mission-controller decompose, deep-think step 4, etc.) that are not reachable from the runtime's root via pre-existing typed links. Zero disables the sweep (default) — the scope is frozen at compile-plan time, which is the pre-2026-04-14 behavior
          
          [default: 0]

      --force-runtime
          Override the ADR-048 backlog-sanity guard on runtime bootstrap.
          
          When a dirty backlog would normally refuse runtime bootstrap (sediment ≥ threshold, default 5), `--force-runtime` bypasses the refusal and writes a `runtime_guard_override` audit event to `events.jsonl` so the override leaves a durable trail.

      --max-actions <MAX_ACTIONS>
          B3 — decreasing action budget (moussage bounds). Each applied runtime action costs one unit; when the budget floor is reached the loop exits with the NAMED reason `budget_exhausted` (exit code 90) instead of dispatching further. This is the well-founded measure that makes an unbounded moussage total. 0 = unbounded (default, operator-local behaviour unchanged). Server-side callers (the tenant drain path) pass the binding-derived value — the bound is never client-writable
          
          [default: 0]

      --max-depth <MAX_DEPTH>
          B1 — maximum DAG depth (longest dependency chain, in molecules). Checked at compile-plan time, BEFORE the loop starts: a plan deeper than the bound is refused with the NAMED error `max_depth_exceeded` (exit code 92), never started. 0 = unbounded (default)
          
          [default: 0]

      --max-molecules <MAX_MOLECULES>
          B2 — maximum molecules tolerated in the fleet while draining. Checked at compile-plan time AND on every loop tick (so mid-run nucleations count); exceeding it exits with the NAMED reason `molecule_quota_exceeded` (exit code 91). 0 = unbounded (default)
          
          [default: 0]

      --resident
          **ADR-095** — switch to the fully event-sourced Resident Runtime loop.
          
          When set, the legacy in-process `DagPolicy` is bypassed and the new [`cosmon_runtime::RuntimeLoop`] takes over. The loop:
          
          - Shells out to `cs ensemble --json`, `cs tackle`, `cs done` exactly as a human operator would (RR-1). - Wakes on FS changes under `.cosmon/state/` (notify backend) plus a `--poll-interval` heartbeat. - Writes an NDJSON trace line per loop iteration to `.cosmon/state/runtime-trace.jsonl` (RR-5). - Exits cleanly on SIGTERM / Ctrl-C. - Drains when the ensemble has no `pending` and no `running`.
          
          **Config-honoring dispatch (ADR-016 delib-20260531-c761, refined by issue #91).** The loop seals `.cosmon/config.toml` (+ the global `~/.config/cosmon/config.toml`) at launch and re-checks it before every dispatch. An on-disk edit is then one of:
          
          - **Reloaded** (no halt) — no running molecule's effective adapter settings changed. This includes edits outside `[adapters]`, edits to an adapter no running worker uses, and edits while none is running. The loop adopts the fresh config for its next dispatch and records a `config-reloaded` trace line and summary count. - **Halted fail-closed** — a running molecule's effective adapter settings changed, or its adapter cannot be identified. The loop refuses to form its next dispatch, emits `EventV2::ConfigDriftDetected`, and exits non-zero (`EX_TEMPFAIL`, 75) so a supervisor relaunches a fresh process that re-derives everything from disk — it never merges the new config into a live process.
          
          The `cs` binary image itself is never sealed (a `cs done` merge reinstalls it on every successful drain by design).
          
          Does not require `<molecule>` — the loop walks the whole ensemble. The positional argument is accepted but ignored in resident mode; pass `_` if you have nothing to name.

      --affinity
          **ADR-145** — model-affinity ordering of the ready frontier.
          
          On a single-resident-model local oracle (`ollama-g5`: 48 GB ≈ one 120 B model in VRAM), an alternating frontier reloads the model (~40 GB off disk) on every dispatch. With `--affinity` the runtime clusters same-model molecules contiguously and drains the resident model first, so a same-model batch pays the load cost once. The per-molecule model is PRE-RESOLVED from each molecule's formula-step `model =` pin (the ADR-142 Incarnation model), since a pending frontier molecule has no `ModelSelected` event yet.
          
          Off by default: cloud dispatch (many models, no resident constraint) keeps pure critical-path order. The reorder is a permutation — the DAG semantics and the set of dispatched molecules are unchanged; only the order within a ready batch differs. Legacy DAG-policy mode only (not `--resident`).

      --resident-model <RESIDENT_MODEL>
          Model already warm in the oracle's VRAM at runtime start, so the affinity reorder drains its bucket first with no reload. Only read when `--affinity` is set; a cold start (unset) simply pays one extra load for the first bucket

      --adapter <NAME>
          **Opt-in run-wide adapter directive** (resident mode only).
          
          The resident scheduler owns exactly one run-wide flag intent — this flag — and nothing below it (COSMON-DEV #21). Passing `--adapter <name>` is the operator's **explicit, conscious** choice to spend on that adapter for *this run*: it stamps every **pin-less** molecule dispatched — both static frontier nodes and children a worker nucleates dynamically mid-run (the converge/committee loop). A per-molecule pin still wins over it.
          
          When this flag is **absent**, the scheduler stamps nothing: the shelled `cs tackle` inherits the environment and runs the *full* canonical resolution chain itself (formula step → `$COSMON_DEFAULT_ADAPTER` → per-galaxy config → global config → the built-in `local` floor). So the operator's live env, session hammer, and committed config are all honoured under `--resident` exactly as they are under a bare `cs tackle` — the resident loop no longer masks them with a rung-1 `--adapter local` floor (the #21 defect). The `local` floor is still reached iff nothing higher speaks, so an *inadvertent* paid dispatch remains impossible: a paid adapter is chosen only by a conscious flag, formula step, env export, or committed config. See `docs/adr` (ADR-095) and the `cs tackle` adapter-chain docs for the single canonical resolution order.

      --base <BRANCH>
          **Opt-in run-wide integration base** (resident mode only).
          
          The base twin of `--adapter`, with the same two-rung precedence: every **pin-less** molecule this run dispatches — one with no persisted base — is tackled with `--base <BRANCH>`, which persists the base on the molecule so its `cs done` merges into `<BRANCH>` rather than the ambient HEAD. A molecule that already carries a base (`cs nucleate --base`, an earlier `cs tackle --base`) keeps it: the per-molecule base wins.
          
          This is how a germinated polymer (`cs spore run`, `cs nucleate --from`) is aimed at an integration branch without tackling each node by hand. The branch must exist locally; a dangling base is refused before the loop starts.

      --harness <KEY=VALUE>
          **Opt-in run-wide harness-settings directive** (resident mode only, repeatable — ADR-177 / issue #86).
          
          The harness twin of `--adapter`, but occupying rung 1 of the *harness* chain rather than the adapter chain: `cs tackle --harness k=v`'s rung, applied run-wide. Unlike `--adapter` and `--base` there is no per-molecule pin to defer to — `[steps.harness]` lives on the executing formula step, not the molecule — so this directive is stamped onto **every** dispatch the run makes (static frontier nodes and dynamically-nucleated children alike) as one `--harness k=v` per key, and merged **per key** with the step's own `[steps.harness]` table by the shelled `cs tackle`, the operator's flag winning (ADR-177 Decision 2). Grammar and semantics are exactly `cs tackle --harness`'s: `key=value`, cosmon recognises no keys and carries the pair verbatim to the adapter's native override channel. Absent (the default), no `--harness` flag reaches any dispatch and each step's own `[steps.harness]` pin, if any, is unmasked.

  -h, --help
          Print help (see a summary with '-h')

EXAMPLES:
  tmux new -d -s runtime cs run <root> --poll-interval 5
  cs run <leaf-id>                   # also valid: 1-node DAG = single dispatch
  cs run <root> --force-runtime      # bypass the ADR-048 backlog-sanity guard

Resident runtime — walks a DAG of N≥1 nodes. Calls `cs tackle` for each
ready node and `cs done` automatically as predecessors complete. The
single-node case (1 = leaf) is the same code path as the N-node case;
`cs tackle <id>` is the no-walk equivalent if the operator wants exactly
one worker without any runtime ceremony.

NEVER run `cs run` in the foreground; always detach via tmux so the
pilot stays responsive.

SEE ALSO: cs tackle (single node, no runtime), docs/handbook.md#one-primitive.
